feat: Working CategoryController w/ tests
